--- a/Projeto-Clothing/views/index.ejs
+++ b/Projeto-Clothing/views/index.ejs
@@ -33,7 +33,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">20% off</span>
-                    <img src="./img/card1.png" class="product-thumb" alt="">
+                    <a href="/search"><img src="./img/card1.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
@@ -45,7 +45,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">20% off</span>
-                    <img src="./img/card2.png" class="product-thumb" alt="">
+                    <a href="/search"><img src="./img/card2.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
@@ -156,7 +156,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/productImage1.png" class="product-thumb" alt="">
+                    <a href="/product"><img src="img/productImage1.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
