--- a/Projeto-Clothing/views/product.ejs
+++ b/Projeto-Clothing/views/product.ejs
@@ -42,7 +42,7 @@
 
             </div>
 
-            <button class="btn cart-btn">Adicionar ao carrinho</button>
+            <a href="/cart"><button class="btn cart-btn">Adicionar ao carrinho</button></a>
             <button class="btn-list">adicionar a lista de desejos</button>
 
         </div>
@@ -74,225 +74,128 @@
         <button class="pre-btn"><img src="/img/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="/img/arrow.png" alt=""></button>
         <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/TSHIRT-THE-BATMAN-SCZ-MAEC366-SCZ-M-10051089528-C1.webp" class="product-thumb"
-                        alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Camiseta Batman</h2>
-                    <p class="product-short-des">Camiseta masculina </p>
-                    <span class="price">R$52,00</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/JAQUETA-C-CAPUZ-DE-MOLETOM-MOLI-PTO-M-10051840679-C1.webp" class="product-thumb"
-                        alt="">
-                    <button class="card-btn">adicionar a lista de desejost</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Jaqueta</h2>
-                    <p class="product-short-des">Jaqueta com Capuz Preta </p>
-                    <span class="price">R$220,00</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/CALCA-MASC-ROSO-AZUL-33655-AZL-42-10051966287-C1.webp" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">calça jeans</h2>
-                    <p class="product-short-des">Calça Masc slim</p>
-                    <span class="price">R$120</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/BERMUDA-C-BOLSO-CARGO-MASC-BRANCO-42-10051850883-C1.webp" class="product-thumb"
-                        alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Bermuda</h2>
-                    <p class="product-short-des">Bermuda Masculina branca.</p>
-                    <span class="price">$72,20</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/RELOGIO-MASC-AVULSO-COPC32CZ-7D-DOU-10052073397-C1.webp" class="product-thumb"
-                        alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Relógio</h2>
-                    <p class="product-short-des">Relógio Masc Mondane</p>
-                    <span class="price">R$320,00</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/oculos-evoke-shift-g21-tartaruga-100230.jpeg" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">óculos</h2>
-                    <p class="product-short-des">óculos evoke</p>
-                    <span class="price">R$520</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/RELOGIO-MASC-AVULSO-MOLIFEAF-8V-VRD-10052072116-C1.webp" class="product-thumb"
-                        alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Relógio</h2>
-                    <p class="product-short-des">Rélógio Sporting</p>
-                    <span class="price">R$152,00</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/oculos-evoke-reverse-brd01-azul-103193.jpeg" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">óculos </h2>
-                    <p class="product-short-des">óculos Evoke</p>
-                    <span class="price">R$420</span><span class="actual-price"></span>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- END CARDS - CONTAINER SHIRTS -->
 
-    <!-- CARDS - CONTAINER SHOES -->
-    <section class="product">
-        <h2 class="product-category">ultimas visualizações</h2>
-        <button class="pre-btn"><img src="./img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="./img/arrow.png" alt=""></button>
-        <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/productImage1.png" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
+            <% produtos.forEach((produto)=> { %>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+
+                        <img src="/img/<%=produto.foto_produto%>" class="product-thumb" alt="">
+                        <button class="card-btn">adicionar a lista de desejos</button>
+                    </div>
+                    <div class="product-info">
+                        <%= produto.nome_produto %>
+                            <h2 class="product-brand">
+                                <%= produto.marca %>
+                            </h2>
+
+                            <p class="product-short-des">
+                                <%= produto.descricao %>
+                            </p>
+
+                            <span class="price">R$<%= produto.preco %></span><span class="actual-price"></span>
+                    </div>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Calvin Klein</h2>
-                    <p class="product-short-des">Camiseta Calvin Kein</p>
-                    <span class="price">R$135,00</span><span class="actual-price"></span>
+
+
+                <!-- <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="/img/TOP-MC-MASS-NARUTO-PRETO-PTO-6-10050883745-C1 (1).webp" class="product-thumb"
+                            alt="">
+                        <button class="card-btn">adicionar a lista de desejos</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">
+                            <%= produto.nome_produto %>
+                        </h2>
+                        <p class="product-short-des">
+                            <%= produto.descricao %>
+                        </p>
+                        <span class="price">R$<%= produto.preco %></span><span class="actual-price"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">0,5% off</span>
-                    <img src="/img/tenis-nike-sb-force-58-premium-rosa-preto-branco-106255.jpeg" class="product-thumb"
-                        alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag">20% off</span>
+                        <img src="/img/camisaFemFaces.webp" class="product-thumb" alt="">
+                        <button class="card-btn">adicionar à lista de desejos</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Hering Faces</h2>
+                        <%= produto.nome_produto %>
+                            <p class="product-short-des">camiseta feminina</p>
+                            <%= produto.descricao %>
+                                <span class="price">R$<%= produto.preco %></span><span
+                                    class="actual-price">R$240,00</span>
+                    </div>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Nike Force58</h2>
-                    <p class="product-short-des">Tênis Nike Rosa</p>
-                    <span class="price">R$665,00</span><span class="actual-price">R$35,00</span>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag">15% off</span>
+                        <img src="/img/camisetaMascK.jpeg" class="product-thumb" alt="">
+                        <button class="card-btn">adicionar à lista de desejo</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Clothing Kids</h2>
+                        <%= produto.nome_produto %>
+                            <p class="product-short-des">Camiseta infantil masc </p>
+                            <%= produto.descricao %>
+                                <span class="price">R$<%= produto.preco %></span>
+                    </div>
                 </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="./img/card11.png" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar à lista de desejo</button>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag">15% off</span>
+                        <img src="/img/camisetafemk.jpeg" class="product-thumb" alt="">
+                        <button class="card-btn">adicionar à lista de desejo</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Clothing Kids</h2>
+                        <%= produto.nome_produto %>
+                            <p class="product-short-des">Camiseta Fem </p>
+                            <%= produto.descricao %>
+                                <span class="price">R$<%= produto.preco %></span>
+
+                    </div>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Penauty</h2>
-                    <p class="product-short-des">Sporting Tênis</p>
-                    <span class="price">R$178,00</span><span class="actual-price">R$22</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card12.png" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">reebook</h2>
-                    <p class="product-short-des">tenis runner black</p>
-                    <span class="price">R$180,00</span><span class="actual-price">R$20,00</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/meia-diamond-hobbs-crew-azul-piscina-105199.jpeg" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Meias Diamond</h2>
-                    <p class="product-short-des">meias crew-azul</p>
-                    <span class="price">R$20,00</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/SHORTDOLL-MINNIE-ROSA-XADREZ-CP-ROS-6-10047920644-C1.webp" class="product-thumb"
-                        alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Shortdoll</h2>
-                    <p class="product-short-des">Shortdoll Minnie</p>
-                    <span class="price">R$120,00</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/SAIA-JNS-BAHAMAS-JAC-38-10050583324-C1.webp" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Saia Bahamas</h2>
-                    <p class="product-short-des">Saia Jeans </p>
-                    <span class="price">R$120,00</span><span class="actual-price"></span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="/img/TOP-MC-MASS-NARUTO-PRETO-PTO-6-10050883745-C1 (1).webp" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar a lista de desejos</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Camiseta Naruto</h2>
-                    <p class="product-short-des">Camiseta Infantil</p>
-                    <span class="price">R$55,00</span><span class="actual-price"></span>
-                </div>
-            </div>
-        </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag">20% off</span>
+                        <img src="/img/bermuda-santa-cruz-classic-dot-stripe-moletom-preto-100980.jpeg"
+                            class="product-thumb" alt="">
+                        <button class="card-btn">adicionar à lista de desejo</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Clothing Surf</h2>
+                        <%= produto.nome_produto %>
+                            <p class="product-short-des">Bermuda </p>
+                            <%= produto.descricao %>
+                                <span class="price">R$<%= produto.preco %></span><span </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-image">
+                            <span class="discount-tag">10% off</span>
+                            <img src="/img/boné bronx.jpeg" class="product-thumb" alt="">
+                            <button class="card-btn">adicionar à lista de desejo</button>
+                        </div>
+                        <div class="product-info">
+                            <h2 class="product-brand">Bronx</h2>
+                            <%= produto.nome_produto %>
+                                <p class="product-short-des">Boné cinza</p>
+                                <%= produto.descricao %>
+                                    <span class="price">R$<%= produto.preco %></span>
+                        </div> -->
+                <% }) %>
     </section>
     <!-- END CARDS - CONTAINER SHOES -->
 
     <footer></footer>
 
-    <script src="./js/nav.js"></script>
-    <script src="./js/footer.js"></script>
-    <script src="./js/home.js"></script>
-    <script src="./js/product.js"></script>
+    <script src="/js/nav.js"></script>
+    <script src="/js/footer.js"></script>
+    <script src="/js/home.js"></script>
+    <script src="/js/product.js"></script>
 
 </body>
 
