--- a/Projeto-Clothing/public/css/404.css
+++ b/Projeto-Clothing/public/css/404.css
@@ -13,6 +13,23 @@
     color: #383838;
 }
 
+body {
+    animation: fade;
+    animation-duration: 5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+
+    to {
+        opacity: 1.5;
+        transform: scale(1);
+    }
+}
+
 /* Smartphones */
 @media (min-width:375px) and (max-width:767px) {
     .four-0-four-image {
