--- a/Projeto-Clothing/public/css/nav.css
+++ b/Projeto-Clothing/public/css/nav.css
@@ -64,6 +64,13 @@ a {
     align-items: center;
 }
 
+img:hover {
+    background-color: #D8D8D8;
+    color: #fff;
+    transition: background-color 1s;
+
+}
+
 .brand-logo {
     height: 60px;
 }
@@ -101,8 +108,19 @@ a {
     border-bottom-right-radius: 10px;
 }
 
+.search-btn:hover {
+    background-color: #610B0B;
+    color: #fff;
+    transition: background-color 1s;
+}
+
 .search-box::placeholder {
     color: #a9a9a9;
+}
+
+.search-box:hover {
+    border-color: #0e0d0d;
+    transition: background-color 1s
 }
 
 .nav-items a {
@@ -133,6 +151,7 @@ a {
     opacity: 0.5;
     transition: .5s;
 }
+
 
 .link:hover {
     opacity: 1;
@@ -218,17 +237,28 @@ a {
     }
 
     .nav-items {
-        display: block;
+        display: flex;
         align-items: center;
     }
 
 
     .nav-items a img {
         width: 30px;
-        margin: -1px 5px 1px 236px;
         cursor: pointer;
     }
 
+    img:hover {
+        background-color: #610B0B;
+        color: #fff;
+        transition: background-color 1s;
+
+    }
+
+
+    .search {
+        width: 180%;
+        display: flex;
+    }
 
     .search-box {
         width: 149px;
@@ -248,6 +278,16 @@ a {
         font-size: 15px;
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
+    }
+
+
+
+    .search-btn:hover {
+        background-color: rgb(174, 137, 137);
+
+        color: #fff;
+        transition: background-color 1s;
+
     }
 
     .link {
