--- a/Projeto-Clothing/views/checkout.ejs
+++ b/Projeto-Clothing/views/checkout.ejs
@@ -40,24 +40,35 @@
       <div class="product-list">
         <p class="section-heading">Seu Carrinho</p>
         <div class="cart">
+          <div class="sm-product">
+            <img src="img/productImage1.png " class="sm-product-img" alt="">
+            <div class="sm-text">
+              <p class="sm-product-name">Camiseta Calvin masculina</p>
+              <p class="sm-des">camiseta 100% algodão </p>
+            </div>
+
+            <div class="item-counter">
+              <button class="counter-btn decrement">-</button>
+              <p class="item-count">1</p>
+              <button class="counter-btn increment">+</button>
+            </div>
+            <p class="sm-price">R$135,00</p>
+          </div>
+        </div>
+        <div class="checkout-section">
+          <div class="checkout-box">
+            <p class="text">Sua fatura,</p>
+            <h1 class="bill">R$135,00</h1>
+            <button class="place-order-btn">Continuar Comprando</button>
+          </div>
+
 
         </div>
-      </div>
-      <div class="checkout-section">
-        <div class="checkout-box">
-          <p class="text">Sua fatura,</p>
-          <h1 class="bill">R$0,00</h1>
-          <button class="place-order-btn">Faça sua Compra</button>
-        </div>
 
 
-      </div>
-
-
-      <script src="js/home.js"></script>
-      <script src="js/cart.js"></script>
-      <script src="js/token.js"></script>
-      <script src="js/checkout.js"></script>
+        <script src="js/home.js"></script>
+        <script src="js/cart.js"></script>
+        <script src="js/checkout.js"></script>
 </body>
 
 </html>
