--- a/Projeto-Clothing/public/css/cart.css
+++ b/Projeto-Clothing/public/css/cart.css
@@ -92,7 +92,7 @@
 
 .item-count {
     text-align: center;
-    line-height: 30px;
+    line-height: 20px;
     background: #f5f5f5;
 }
 
@@ -138,7 +138,7 @@
 } */
 .checkout-box {
     width: 30vw;
-    margin-top: 57px;
+    margin-top: 27px;
     height: 129px;
     border-radius: 2px;
     border: 1px solid #d8d8d8;
@@ -182,6 +182,20 @@
     }
 }
 
+.size-radio-btn {
+    display: flex;
+    flex-direction: row;
+    width: 41px;
+    padding: 0px 28px 0px 9px;
+    height: 59px;
+    font-size: 21px;
+    margin: 19px 0px 8px -2px;
+    border: 1px solid #383838;
+    border-radius: 50%;
+    line-height: 48px;
+    text-transform: uppercase;
+}
+
 .cart-section {
     width: 100%;
     padding: 20px 10vw;
@@ -207,7 +221,7 @@
 .cart,
 .wishlist {
     width: 100%;
-    padding: 20px;
+    padding: 2px;
     border-radius: 5px;
     border: 1px solid #d8d8d8;
     margin-bottom: 60px;
@@ -241,15 +255,15 @@
 }
 
 .sm-product-name {
-    font-size: 25px;
+    font-size: 12px;
     font-weight: 700;
     text-transform: capitalize;
 }
 
 .sm-des {
-    font-size: 18px;
-    opacity: 0.5;
-    line-height: 25px;
+    font-size: 8px;
+    opacity: 0.7;
+    line-height: 11px;
     text-transform: capitalize;
     margin-top: 10px;
 }
@@ -263,8 +277,8 @@
 
 .counter-btn,
 .item-count {
-    width: 30px;
-    height: 30px;
+    width: 18px;
+    height: 15px;
 }
 
 .counter-btn {
@@ -276,13 +290,13 @@
 
 .item-count {
     text-align: center;
-    line-height: 30px;
+    line-height: 20px;
     background: #f5f5f5;
 }
 
 .sm-price {
-    font-size: 50px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 100;
     color: #383838;
 }
 
@@ -315,8 +329,8 @@
 
 
 .checkout-box {
-    width: 30vw;
-    margin-top: 57px;
+    width: 22vw;
+    margin-top: 74px;
     height: 129px;
     border-radius: 2px;
     border: 1px solid #d8d8d8;
